--- a/webapp/app/templates/base.html
+++ b/webapp/app/templates/base.html
@@ -20,34 +20,12 @@
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="/">ePortal - DocuSign</a>
+      <a class="navbar-brand" href="/">Algo101</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-<!--        <ul class="navbar-nav mr-auto">-->
-<!--          <li class="nav-item active">-->
-<!--            <a class="nav-link" href="/">Home <span class="sr-only">(current)</span></a>-->
-<!--          </li>-->
 
-<!--          {% if session['ds_user_name'] %}-->
-<!--            <li>-->
-<!--              <a class="nav-link" href="{{ url_for('ds.ds_logout') }}" id="logout"-->
-<!--                 data-busy="href">Logout <span class="sr-only">(current)</span></a>-->
-<!--            </li>-->
-<!--          {% else %}-->
-<!--            <li>-->
-<!--              <a class="nav-link" href="{{ url_for('ds.ds_must_authenticate') }}" id="login"-->
-<!--                 data-busy="href">Login <span class="sr-only">(current)</span></a>-->
-<!--            </li>-->
-<!--          {% endif %}-->
-<!--        </ul>-->
-
-<!--        {% if session['ds_user_name'] %}-->
-<!--          <span class="navbar-text float-right">-->
-<!--            Welcome {{ session['ds_user_name'] }}-->
-<!--          </span>-->
-<!--        {% endif %}-->
 
       </div>
     </nav>
