--- a/webapp/app/templates/base.html
+++ b/webapp/app/templates/base.html
@@ -5,49 +5,32 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="">
     <meta name="author" content="">
-<!--    <link rel="icon" href="{{ url_for('static', filename='assets/favicon.ico') }}">-->
+
     <title>{{ title }}</title>
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <!-- Custom styles for this template -->
-    <link href="{{ url_for('static', filename='assets/css.css') }}" rel="stylesheet">
-    <link rel="apple-touch-icon" sizes="180x180" href="/assets/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/assets/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/assets/favicon-16x16.png">
-    <link rel="manifest" href="/assets/site.webmanifest">
 
+
+     <link rel="apple-touch-icon" sizes="180x180" href="../../../favicon_io/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="../../../favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="../../../favicon_io/favicon-16x16.png">
+    <link rel="manifest" href="../../../favicon_io/site.webmanifest">
   </head>
 
   <body>
     <nav class="navbar navbar-expand-md navbar-dark bg-dark sticky-top">
-      <a class="navbar-brand" href="/">Algo101</a>
+      <a class="navbar-brand" href="/">Web App</a>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExampleDefault" aria-controls="navbarsExampleDefault" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
       <div class="collapse navbar-collapse" id="navbarsExampleDefault">
-
 
       </div>
     </nav>
 
     <div class="container">
 
-
-
-      <section id="busy" class="feedback"><div class="spinner">
-        <div class="rect1"></div>
-        <div class="rect2"></div>
-        <div class="rect3"></div>
-        <div class="rect4"></div>
-        <div class="rect5"></div>
-        </div>
-      </section>
-
-<!--      <p id="download-continue" class="feedback"><a href="/">Continue</a></p>-->
-
-      <section id="content">
-          {% block content %}{% endblock %}
-      </section>
     </div>
     
     <!-- Bootstrap core JavaScript
@@ -61,7 +44,9 @@
   
     <script src="https://cdn.jsdelivr.net/npm/lodash@4.17.5/core.min.js"></script>
 
-
+    <script src="{{ url_for('static', filename='assets/notify.min.js') }}"></script> <!-- see https://notifyjs.jpillora.com/ -->
+    <script src="{{ url_for('static', filename='assets/eg_03.js') }}"></script>
+    
     <!-- Data from the server -->
     {% set json_messages = get_flashed_messages() | tojson %}
     <div id="server_data"
